add some polymer components

--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
 
 	  });
 	  </script>
+
 	</head>
 
 	<body unresolved>	
@@ -131,11 +132,9 @@
 			<core-header-panel main>
 				<core-toolbar id="mainheader">
 					<paper-icon-button id="navicon" icon="menu"></paper-icon-button>
-		      <paper-tabs id="tab2" selected="all" self-end>
-		        <paper-tab name="one">one</paper-tab>
-		        <paper-tab name="two">two</paper-tab>
-		        <paper-tab name="three">three</paper-tab>
-		      </paper-tabs>
+		      <span flex>Title</span>
+		      <paper-icon-button icon="refresh"></paper-icon-button>
+		      <paper-icon-button icon="more-vert"></paper-icon-button>
 				</core-toolbar>
 			</core-header-panel>
 		</core-drawer-panel>
