--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
-<html>
+<html lang="en">
 	<head>
 		<title>demo</title>
-		<meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
+		<meta charset="UTF-8" name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
 	  <link rel="import" href="components/polymer/layout.html">
 	  <link rel="import" href="components/polymer/polymer.html">
+	  <link rel="import" href="components/paper-ripple/paper-ripple.html">
 	  <link rel="import" href="components/core-header-panel/core-header-panel.html">
 	  <link rel="import" href="components/core-toolbar/core-toolbar.html">
 	  <link rel="import" href="components/paper-tabs/paper-tabs.html">
@@ -14,6 +15,8 @@
 	  <link rel="import" href="components/core-icon-button/core-icon-button.html">
 	  <link rel="import" href="components/core-collapse/core-collapse.html">
 	  <link rel="import" href="components/core-submenu/core-submenu.html">
+	  <link rel="import" href="components/paper-shadow/paper-shadow.html">
+	  <link rel="import" href="components/paper-button/paper-button.html">
 	  <script src="components/platform/platform.js"></script>
 	  <style>
 	  html,body {
@@ -23,25 +26,18 @@
 	    font-family: sans-serif;
 	  }
 	  core-header-panel {
+	  	width: 100%;
 	    height: 100%;
 	    overflow: auto;
+	    position: absolute;
 	    -webkit-overflow-scrolling: touch; 
 	  }
 	  core-toolbar {
 	    background: #03a9f4;
 	    color: white;
 	  }
-	  #tabs {
-	    width: 100%;
-	    margin: 8px;
-	    -webkit-user-select: none;
-	    -moz-user-select: none;
-	    -ms-user-select: none;
-	    user-select: none;
-	    text-transform: uppercase;
-	  }
 	  .container {
-	    width: 90%;
+	    width: 100%;
 	    margin: 0;
 	  }
 		#menuicon {
@@ -50,7 +46,56 @@
 		core-item:hover {
 			cursor: pointer;
 		}
-	  @media (min-width: 481px) {
+		#menu {
+			margin-top: 5px;
+			padding: 1px 0;
+			background: white;
+		}
+		#menu core-item {
+			margin: 5px 0;
+		}
+		section {
+			display: flex;
+			display: -webkit-flex;
+			width: 80%;
+			margin: 5px 16px;
+		}
+		#dns-card {
+			width: 80%;
+		}
+		.card {
+			background: white;
+			width: 127%;
+			height: 400px;
+			position: relative;
+			margin: 16px;
+			border-radius: 2px;
+		}
+		.card-inner {
+			position: absolute;
+			left: 5px;
+			top: 5px;
+			right: 5px;
+			bottom: 5px;
+			border-radius: 2px;
+			overflow-x: auto;
+			overflow-y: auto;
+		}
+		paper-button[raiseButton].colored {
+			width: 100%;
+			background: #03a9f4;
+			color: #fff;
+		}
+		paper-button[raiseButton].colored #ripple,
+		paper-button[raiseButton].colored::shadow #ripple {
+			color: #000;
+		}
+    paper-button[raisedButton].colored #focusBg,
+    paper-button[raisedButton].colored::shadow #focusBg {
+      background: #000;
+    }
+
+	  @media (min-width: 600px) {
 	    #tabs {
 	      width: 250px;
 	    }
@@ -60,13 +105,32 @@
   		#menuicon {
 				display: none;
 			}
+			#menu {
+				margin-top: 70px;
+				background: white;
+			}
 			core-item:hover {
 				cursor: pointer;
 			}
+			section {
+				display: flex;
+				display: -webkit-flex;
+				width: 80%;
+				margin: 50px 16px;
+			}
+			.card {
+				background: white;
+				width: 127%;
+				height: 600px;
+				position: relative;
+				margin: 16px;
+				border-radius: 2px;
+			}
+
 	  }
 
 	  #navheader {
-	  	background-color: #56ba89;
+	  	background-color: #03a9f4;
 	  }
 	  core-drawer-panel:not([narrow]) #navicon {
 	  	display: none;
@@ -107,36 +171,87 @@
 
 	<body unresolved>	
 		<core-drawer-panel id="drawerPanel">
-			<core-header-panel drawer>
-				<core-toolbar id="navheader">
-	        <span flex six>menu</span>
-					<core-icon-button id="menuicon" icon="menu"></core-icon-button>
-				</core-toolbar>
-				<core-menu>
-					<core-item id="menu-item-settings" icon="settings" label="Settings">
-						<a href="#settings" tartget="_self"></a>
-					</core-item>
-					<core-submenu id="menu-item-favorite" icon="favorite" label="Favorite">
-						<core-item label="favorite1"></core-item>
-						<core-item label="favorite2"></core-item>
-						<core-item label="favorite3"></core-item>
-					</core-submenu>
-					<core-submenu id="menu-item-account" icon="account-box" label="Account">
-						<core-item label="acount1"></core-item>
-						<core-item label="acount2"></core-item>
-					</core-submenu>
-				</core-menu>
-					
-			</core-header-panel>
-
-			<core-header-panel main>
-				<core-toolbar id="mainheader">
-					<paper-icon-button id="navicon" icon="menu"></paper-icon-button>
-		      <span flex>Title</span>
-		      <paper-icon-button icon="refresh"></paper-icon-button>
-		      <paper-icon-button icon="more-vert"></paper-icon-button>
-				</core-toolbar>
-			</core-header-panel>
+			
+			<div drawer class="card-inner paper-shadow-bottom-z-5">
+				<core-header-panel>
+					<core-toolbar id="navheader">
+						<div flex></div>
+						<core-icon-button id="menuicon" icon="menu"></core-icon-button>
+					</core-toolbar>
+					<div id="menu" class="card-inner paper-shadow-top-z-5">
+						<core-item>
+							<paper-button id="add-ns" raiseButton class="colored" horizontal layout start>添加nameserver记录</paper-button>
+						</core-item>
+						<core-item>
+							<paper-button id="add-a" raiseButton class="colored" horizontal layout start>添加A记录</paper-button>
+						</core-item>
+						<core-item>
+							<paper-button id="add-cname" raiseButton class="colored" horizontal layout start>添加cname记录</paper-button>
+						</core-item>
+						<core-item>
+							<paper-button id="add-mx" raiseButton class="colored" horizontal layout start>添加mx记录</paper-button>
+						</core-item>
+						<core-item>
+							<paper-button id="add-txt" raiseButton class="colored" horizontal layout start>添加txt记录</paper-button>
+						</core-item>
+					</div>
+				</core-header-panel>
+			</div>
+			
+			<div main>
+				<core-header-panel>
+					<core-toolbar id="mainheader">
+						<paper-icon-button id="navicon" icon="menu"></paper-icon-button>
+			      <span flex>DNS manager system</span>
+					</core-toolbar>
+				</core-header-panel>
+				<br/>
+				<br/>
+				<br/>
+				<section>
+					<div id="dns-card">
+						<div class="card paper-shadow-top-z-5">
+							<div class="card-inner paper-shadow-bottom-z-5">
+								<core-menu>
+									<core-submenu id="dns-ns" label="域名(NS)(最多20条)">
+										<core-item>
+											dfsafsda<br/>
+										</core-item>
+									</core-submenu>
+								</core-menu>
+								<core-menu>
+									<core-submenu id="dns-a" label="主机名(A)(最多20条)">
+										<core-item>
+											fjlksdaj<br/>
+										</core-item>
+									</core-submenu>
+								</core-menu>
+								<core-menu>
+									<core-submenu id="dns-cname" label="别名(CNAME)(最多20条)">
+										<core-item>
+											jfkldsa<br/>
+										</core-item>
+									</core-submenu>
+								</core-menu>
+								<core-menu>
+									<core-submenu id="dns-mx" label="邮件交换记录(MX)(最多20条)">
+										<core-item>
+											jfkldsa<br/>
+										</core-item>
+									</core-submenu>
+								</core-menu>
+								<core-menu>
+									<core-submenu id="dns-txt" label="文本记录(TXT)(最多20条)">
+										<core-item>
+											jfkldsa<br/>
+										</core-item>
+									</core-submenu>
+								</core-menu>
+							</div>
+						</div>
+					</div>
+				</section>
+			</div>
 		</core-drawer-panel>
 	</body>
 
